--- a/src/index.css
+++ b/src/index.css
@@ -14,6 +14,11 @@ html {
   scroll-behavior: smooth;
 }
 
-
-
-
+html,
+body {
+  width: 100%;
+  max-width: 100vw;
+  overflow-x: hidden; 
+  margin: 0;
+  padding: 0;
+}
