--- a/src/sections/styles/Hero.css
+++ b/src/sections/styles/Hero.css
@@ -4,6 +4,7 @@
   padding-top: 150px;
   padding-bottom: 50px;
   position: relative;
+  /* overflow-x: visible; */
 }
 
 /* --- 1. The Background Blob  --- */
